--- a/.gitmodules
+++ b/.gitmodules
@@ -73,3 +73,6 @@
 [submodule "vim/bundle/snipmate-snippets"]
 	path = vim/bundle/snipmate-snippets
 	url = https://github.com/honza/snipmate-snippets.git
+[submodule "vim/bundle/vim-nodejs-complete"]
+	path = vim/bundle/vim-nodejs-complete
+	url = https://github.com/myhere/vim-nodejs-complete
